--- a/Cargo.toml
+++ b/Cargo.toml
@@ -51,26 +51,26 @@ chrono = { version = "0.4.23", default-features = false, features = [
 ], optional = true }
 clap = { version = "4.1.4", features = ["derive"], optional = true }
 colored = "2.0.0"
-env_logger = { version = "0.10.0", optional = true }
+env_logger = { version = "0.11.3", optional = true }
 log = { version = "0.4.17", features = ["release_max_level_info"] }
 phf = { version = "0.11.1", features = ["macros"] }
-reqwest = { version = "0.11.14", default-features = false, features = [
+reqwest = { version = "0.12.3", default-features = false, features = [
     "json",
     "socks",
 ] }
 rodio = { version = "0.17.1", optional = true }
 serde = { version = "1.0.152", features = ["derive"] }
 serde_json = { version = "1.0.91", optional = true }
-strum = { version = "0.25.0", features = ["derive"] }
+strum = { version = "0.26.2", features = ["derive"] }
 uuid = { version = "1.3.0", features = [
     "v4",
     "fast-rng",
     "macro-diagnostics",
 ], optional = true }
 xml-rs = "0.8.4"
-pyo3 = { version = "0.19.0", features = ["extension-module", "abi3", "abi3-py38"], optional = true }
+pyo3 = { version = "0.20.3", features = ["extension-module", "abi3", "abi3-py38"], optional = true }
 color-eyre = { version = "0.6.2", optional = true }
-tokio-tungstenite = { version = "0.20", optional = true, default-features = false }
+tokio-tungstenite = { version = "0.21", optional = true, default-features = false }
 tokio = { version = "1.25.0", features = ["rt", "macros"], optional = true }
 futures-util = { version = "0.3.26", default-features = false, optional = true }
 encoding_rs_io = { version = "0.1.7", optional = true }
@@ -81,14 +81,16 @@ toml = { version = "0.8.2", default-features = false, features = [
 dirs = { version = "5.0.0", optional = true }
 open = { version = "5", optional = true }
 url = "2.3.1"
-hyper = { version = "0.14.25" }
+hyper = { version = "1" }
+hyper-util = { version = "0.1", features = ["tokio"] }
 tokio-socks = { version = "0.5.1", optional = true }
 anyhow = "1.0.70"
 async-trait = { version = "0.1.68", optional = true }
 bytes = { version = "1.4.0", optional = true }
+http-body-util = "0.1.1"
 
 [dev-dependencies]
 futures = "0.3.28"
 tokio = { version = "1.25.0", features = ["rt", "macros", "fs"] }
 rodio = { version = "0.17.1" }
-rustyline = "12.0.0"
+rustyline = "14.0.0"
